EKS/favorite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorite-deployment
  labels:
    app: favorite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorite
  template:
    metadata:
      labels:
        app: favorite
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: favorite
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:favorite-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5004
