EKS/performance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: performance-deployment
  labels:
    app: performance
spec:
  selector:
    matchLabels:
      app: performance
  template:
    metadata:
      labels:
        app: performance
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: performance
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:performance-latest
        imagePullPolicy: Always
        
        ports:
          - containerPort: 5005
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
