EKS/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: search
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:search-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5006
