EKS/survey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-deployment
  labels:
    app: survey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey
  template:
    metadata:
      labels:
        app: survey
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: survey
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:survey-latest
        imagePullPolicy: Always
        
        ports:
          - containerPort: 5003
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
