EKS/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: auth
  ports:
  - name: auth-service
    port: 80
    targetPort: 5002
