EKS/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: default
  labels:
    app: search
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: search
  ports:
  - name: search-service
    port: 80
    targetPort: 5006
